@@ -1,5 +1,10 @@
 2002-01-22  Michael Meeks  <michael@ximian.com>
 
+	* bonobo/bonobo-ui-engine.c (state_update_new):
+	sensitivity fix from stable.
+
+2002-01-22  Michael Meeks  <michael@ximian.com>
+
 	* bonobo/bonobo-ui-preferences.c
 	(bonobo_ui_gconf_leaks_refs): allow gconf to be turned off.
 	(bonobo_ui_preferences_get_toolbar_style): upd.
